Prevent stretching of language switch icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,10 @@ nav {
     cursor: pointer;
 }
 
+.language-switch .icon {
+    align-self: center;
+}
+
 .language-dropdown {
     height: 100%;
     position: fixed;
